Closed Bug 1187512 Opened 9 years ago Closed 9 years ago

Fix some more unifed bustage

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file)

This builds in non-unified mode, albeit with a handful of remaining warnings.
Attachment #8638811 - Flags: review?(jcoppeard)
Comment on attachment 8638811 [details] [diff] [review]
clean_up_more_unified_bustage-v0.diff

Review of attachment 8638811 [details] [diff] [review]:
-----------------------------------------------------------------

Nice, thanks for fixing all of these.
Attachment #8638811 - Flags: review?(jcoppeard) → review+
https://hg.mozilla.org/mozilla-central/rev/56fc13299fe6
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: