Bug 1187512 - Fix accumulated unified bustage in SpiderMonkey; r=jonco