js/src/vm/ReceiverGuard.cpp
@@ -8,6 +8,7 @@
 
 #include "builtin/TypedObject.h"
 #include "vm/UnboxedObject.h"
+#include "jsobjinlines.h"
 
 using namespace js;
 
